2005-05-17  Alexander Olk  <xenomorph2@onlinehome.de>

	* AboutDialog.cs, ByteArrayPanel.cs, ColorPanel.cs, ImagePanel.cs, IResource.cs,
	  IResourceRenderer.cs, MainForm.cs, ResourceBase.cs, ResourceByteArray.cs,
	  ResourceColor.cs, ResourceIcon.cs, ResourceImage.cs, ResourceListBox.cs,
	  ResourceString.cs, ResourceType.cs, TextEntryDialog.cs, TextPanel.cs, Makefile:
	  - Added byte array resource, color resource
	  - removed the hashtable, ListBox collection now handles that stuff
	  - moved some code to the ResourceListBox class

2005-05-15  Alexander Olk  <xenomorph2@onlinehome.de>

	* AboutDialog.cs, ImagePanel.cs, IResource.cs, IResourceRenderer.cs, MainForm.cs,
	  ResourceBase.cs, ResourceIcon.cs, ResourceImage.cs, ResourceListBox.cs,
	  ResourceString.cs, ResourceType.cs, TextEntryDialog.cs, TextPanel.cs:
	  Major rewrite, some old files/classes removed, new added.
	  Added ownerdrawn ListBox to display the resources.

2005-04-01  Alexander Olk  <xenomorph2@onlinehome.de>

	* AboutDialog.cs, ContentStruct.cs, ContentType.cs, ImagePanel.cs,
	  MainForm.cs, TextEntryDialog.cs, TextPanel.cs:
	  Initial import