@@ -1,10 +1,10 @@
 all: mono
 
 mono:
-	mcs -out:resedit.exe AboutDialog.cs ByteArrayPanel.cs ColorPanel.cs ImagePanel.cs IResource.cs IResourceRenderer.cs MainForm.cs ResourceBase.cs ResourceByteArray.cs ResourceColor.cs ResourceIcon.cs ResourceImage.cs ResourceListBox.cs ResourceString.cs ResourceType.cs TextEntryDialog.cs TextPanel.cs /r:System.Windows.Forms.dll /r:System.Drawing.dll
+	mcs -out:resedit.exe AboutDialog.cs ByteArrayPanel.cs ColorPanel.cs ImagePanel.cs IResource.cs IResourceRenderer.cs MainForm.cs ResourceBase.cs ResourceByteArray.cs ResourceColor.cs ResourceCursor.cs  ResourceIcon.cs ResourceImage.cs ResourceListBox.cs ResourceString.cs ResourceType.cs TextEntryDialog.cs TextPanel.cs /r:System.Windows.Forms.dll /r:System.Drawing.dll
 
 dotnet:
-	csc -out:resedit.exe AboutDialog.cs ByteArrayPanel.cs ColorPanel.cs ImagePanel.cs IResource.cs IResourceRenderer.cs MainForm.cs ResourceBase.cs ResourceByteArray.cs ResourceColor.cs ResourceIcon.cs ResourceImage.cs ResourceListBox.cs ResourceString.cs ResourceType.cs TextEntryDialog.cs TextPanel.cs /r:System.Windows.Forms.dll /r:System.Drawing.dll
+	csc -out:resedit.exe AboutDialog.cs ByteArrayPanel.cs ColorPanel.cs ImagePanel.cs IResource.cs IResourceRenderer.cs MainForm.cs ResourceBase.cs ResourceByteArray.cs ResourceColor.cs ResourceCursor.cs  ResourceIcon.cs ResourceImage.cs ResourceListBox.cs ResourceString.cs ResourceType.cs TextEntryDialog.cs TextPanel.cs /r:System.Windows.Forms.dll /r:System.Drawing.dll
 
 clean:
 	rm resedit.exe -r -f
