@@ -1,3 +1,10 @@
+2005-09-21  Peter Dennis Bartok  <pbartok@novell.com>
+
+	* ResourceCursor.cs: Added
+	* ResourceType.cs: Added Cursor type
+	* MainForm.cs: Added support for cursor type
+	* Makefile: Added ResourceCursor.cs to list of source files
+
 2005-05-17  Alexander Olk  <xenomorph2@onlinehome.de>
 
 	* AboutDialog.cs, ByteArrayPanel.cs, ColorPanel.cs, ImagePanel.cs, IResource.cs,
